third_party/move/move-compiler-v2/tests/more-v1/expansion/weird_apply_assign.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/expansion/weird_apply_assign.move:7:11
  │
7 │         S f = S { f: 0 };
  │           ^
  │           │
  │           Unexpected 'f'
  │           Expected ';'
